# m5gfx-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch_repos.py  generate_bindings.py  lgfx_sdl.hpp  m5gfx_bind.cpp  main.cpp  repos.json  setup.py
m5gfx/: __init__.py  example.py  test.py
